fix stretched out image on the yearbook custom image for non-logged in users

--- a/wp-content/themes/makerfaire/scss/yearbook-events.scss
+++ b/wp-content/themes/makerfaire/scss/yearbook-events.scss
@@ -63,6 +63,7 @@
          img {
             padding: 40px;
             width: 80%;
+            height: auto;
             position: relative;
             z-index: 10;
          }
